# peerpiper-desktop

./: .gitignore  .prettierrc  README.md  justfile  package-lock.json  package.json  prettier.config.js  readme.md  svelte.config.js
.github/workflows/: release.yml
platform/android/app/: build.gradle
platform/android/app/src/main/java/com/krupitskas/pong/: MainActivity.java
platform/android/app/src/main/res/layout/: activity_main.xml
platform/ios/greetings.xcodeproj/: project.pbxproj
src/: app.css
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: main.rs
src/lib/: App.svelte  Chat.svelte  Greet.svelte  NodeControl.svelte  Spinner.svelte  Status.svelte
src/routes/: +layout.svelte  +page.svelte
